--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "react-native-qrcode-composer",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint . --ext .ts,.tsx",
   },
   "main": "lib/index.js",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "react-native": "^0.74.0",
     "typescript": "^5.4.5"
   }
