--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-native": "^0.74.0",
     "typescript": "^5.4.5"
   }
