--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,7 +99,7 @@
     "noUncheckedIndexedAccess": false,                   /* Add 'undefined' to a type when accessed using an index. */
     // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
-    "allowUnusedLabels": fa;se,                          /* Disable error reporting for unused labels. */
+    "allowUnusedLabels": false,                          /* Disable error reporting for unused labels. */
     "allowUnreachableCode": false,                       /* Disable error reporting for unreachable code. */
 
     /* Completeness */
