--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /example/node_modules
 
 # Xcode specific settings
-/build/
+**/ios/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -61,7 +61,7 @@ local.properties
 
 # Ruby / CocoaPods
 **/Pods/
-/vendor/bundle/
+**/vendor/bundle/
 
 # fastlane
 **/fastlane/report.xml
@@ -73,9 +73,9 @@ local.properties
 *.jsbundle
 
 # Yarn specifics
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+**/.yarn/*
+!**/.yarn/patches
+!**/.yarn/plugins
+!**/.yarn/releases
+!**/.yarn/sdks
+!**/.yarn/versions
