--- a/package.json
+++ b/package.json
@@ -2,12 +2,41 @@
   "name": "react-native-qrcode-composer",
   "version": "0.1.0",
   "scripts": {
+    "prepare": "bob build",
     "build": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write src",
     "test": "jest"
   },
-  "main": "lib/index.js",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.tsx",
+  "types": "lib/typescript/index.d.ts",
+  "source": "src/index.tsx",
+  "files": [
+    "src",
+    "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
+  "keywords": [
+    "react-native",
+    "qrcode",
+    "qr code",
+    "svg",
+    "react-native-qrcode-svg",
+    "react-native-qrcode",
+    "qrcode-composer"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/afonsograca/react-native-qrcode-composer.git"
+  },
+  "homepage": "https://github.com/afonsograca/react-native-qrcode-composer#readme",
+  "bugs": {
+    "url": "https://github.com/afonsograca/react-native-qrcode-composer/issues"
+  },
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
@@ -31,7 +60,22 @@
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.2.5",
+    "react-native-builder-bob": "^0.23.2",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/",
+    "example/node_modules/"
+  ]
 }
