--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,8 +108,13 @@
   },
   "exclude": [
     "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
+    "example",
+    "build",
+    "lib",
+    "*.config.js",
+    "__tests__/**/*",
+    "**/*.test.*",
+    "**/*.spec.*",
+    "*.json"
   ]
 }
