--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "bracketSpacing": false,
     "printWidth": 80,
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "endOfLine": "auto"
 }
