--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "prepare": "bob build",
     "build": "tsc",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": " eslint .",
     "format": "prettier --write src",
     "test": "jest"
   },
@@ -13,6 +13,7 @@
   "react-native": "src/index.tsx",
   "types": "lib/typescript/index.d.ts",
   "source": "src/index.tsx",
+  "type": "module",
   "files": [
     "src",
     "lib",
@@ -46,23 +47,38 @@
     "react-native": ">=0.64.0",
     "react-native-svg": ">=13.2.0"
   },
+  "dependencies": {
+    "qrcode": "^1.5.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.5",
+    "@eslint/js": "^9.3.0",
+    "@react-native/eslint-config": "^0.74.83",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
     "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import-x": "^0.5.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.2.5",
+    "react": ">=17.0.1",
+    "react-native": ">=0.64.0",
     "react-native-builder-bob": "^0.23.2",
+    "react-native-svg": ">=13.2.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   },
   "react-native-builder-bob": {
     "source": "src",
@@ -72,10 +88,5 @@
       "module",
       "typescript"
     ]
-  },
-  "eslintIgnore": [
-    "node_modules/",
-    "lib/",
-    "example/node_modules/"
-  ]
+  }
 }
