--- a/example/package.json
+++ b/example/package.json
@@ -3,40 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "npx react-native start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.0",
-    "react-native-qrcode-composer": "file:../",
     "react-native-svg": ">=13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
-    "@react-native/typescript-config": "0.74.81",
     "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
-    "escape-string-regexp": "^5.0.0",
     "eslint": "^8.19.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-module-resolver": "^1.5.0",
-    "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-svg-transformer": "^1.3.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "react-native-svg-transformer": "^1.3.0"
   },
   "engines": {
     "node": ">=18"
