--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
     "@eslint/js": "^9.3.0",
@@ -60,6 +61,7 @@
     "@types/jest": "^29.5.12",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
+    "@types/react-test-renderer": "^18.3.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.3.0",
@@ -68,6 +70,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "globals": "^15.3.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
@@ -76,6 +79,7 @@
     "react-native": ">=0.64.0",
     "react-native-builder-bob": "^0.23.2",
     "react-native-svg": ">=13.2.0",
+    "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0"
