--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.tsx",
-  "types": "lib/typescript/index.d.ts",
+  "types": "lib/typescript/types/index.d.ts",
   "source": "src/index.tsx",
   "type": "module",
   "files": [
