--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.tsx",
-  "types": "lib/typescript/types/index.d.ts",
+  "types": "lib/typescript/index.d.ts",
   "source": "src/index.tsx",
   "type": "module",
   "files": [
     "lib",
-    "src"
+    "src",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "keywords": [
     "react-native",
